--- a/.github/workflows/nextjs-ci-cd.yml
+++ b/.github/workflows/nextjs-ci-cd.yml
@@ -58,7 +58,7 @@ jobs:
         fi
     
     - name: Lint
-      run: pnpm lint -- --no-interactive
+      run: pnpm lint:ci
     
     - name: Build
       run: pnpm build
