--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:ci": "next lint --max-warnings 50"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.9",
     "@hookform/resolvers": "^3.9.1",
     "@next/swc-wasm-nodejs": "^15.4.0",
     "@radix-ui/react-accordion": "1.2.2",
